[package]
name = "diesel_to_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", default-features = false, features = ["parsing", "printing", "full", "extra-traits"]}
quote = {version = "1.0", default-features = false}
